# gausplat-loader

./: Cargo.toml  README.md  rustfmt.toml
benches/: polygon.rs
examples/data/hello-world/: ascii+space.txt  utf8+newline.txt
examples/data/polygon/: another-cube.greg-turk.binary-be.ply  another-cube.greg-turk.binary-le.ply  another-cube.greg-turk.zeros.binary-le.ply  duplicate-format.ascii.ply  empty-element.ascii.ply  empty-element.binary-le.ply  misplaced-property.ascii.ply  orphan-property.ascii.ply  supported-data-types-common.ply  supported-data-types-special.ply  triangle.binary-be.ply  triangle.binary-le.ply  valid-block-ascii.ply  valid-block.ascii.ply  valid-keyword.ascii.ply
src/: lib.rs
src/adapter/: indexmap.rs  mod.rs
src/collection/: indexmap.rs  mod.rs
src/colmap/: mod.rs
src/colmap/camera/: cameras.rs  mod.rs  pinhole.rs
src/colmap/image/: images.rs  mod.rs
src/colmap/point/: mod.rs  points.rs
src/container/: indexmap.rs
src/dataset/gaussian_3d/: mod.rs
src/dataset/gaussian_3d/camera/: mod.rs
src/dataset/gaussian_3d/image/: mod.rs
src/dataset/gaussian_3d/view/: mod.rs
src/error/: mod.rs
src/function/: decode.rs  encode.rs  geometry.rs  graphic.rs  into.rs  mod.rs  open.rs
src/scene/: mod.rs
src/scene/data/gaussian_3d/: mod.rs
src/scene/image/: images.rs  mod.rs
src/scene/point/: mod.rs  points.rs
src/scene/source/colmap/: mod.rs
src/scene/source/colmap/camera/: cameras.rs  mod.rs  pinhole.rs
src/scene/source/colmap/image/: images.rs  mod.rs
src/scene/source/colmap/image_file/: image_files.rs  mod.rs
src/scene/source/colmap/point/: mod.rs  points.rs
src/scene/source/file/: files.rs  mod.rs
src/scene/sparse_view/: mod.rs
src/scene/sparse_view/image/: mod.rs
src/scene/sparse_view/point/: mod.rs
src/scene/sparse_view/view/: mod.rs
src/scene/view/: mod.rs  views.rs
src/source/: mod.rs  point.rs  view.rs
src/source/colmap/: mod.rs
src/source/colmap/camera/: cameras.rs  mod.rs  pinhole.rs
src/source/colmap/image/: images.rs  mod.rs
src/source/colmap/image_file/: image_files.rs  mod.rs
src/source/colmap/point/: mod.rs  points.rs
src/source/file/: files.rs  mod.rs
src/source/image/: images.rs  mod.rs
src/source/polygon/: LICENSE.md  SUPPLEMENT.md  SYNTAX.md  format.rs  header.rs  mod.rs
src/source/polygon/block/: comment.rs  data.rs  element.rs  format.rs  mod.rs  property.rs
src/source/polygon/block/comment/: mod.rs  obj_info.rs
src/source/polygon/block/property/: list.rs  mod.rs  scalar.rs
src/source/polygon/block/property/list/: data.rs  info.rs  mod.rs
src/source/polygon/block/property/scalar/: data.rs  info.rs  mod.rs
src/source/polygon/body/: mod.rs
src/source/polygon/body/block/: data.rs  list.rs  mod.rs  packed.rs  planar.rs  scalar.rs
src/source/polygon/body/data/: list.rs  mod.rs  scalar.rs
src/source/polygon/group/: id.rs  mod.rs
src/source/polygon/head/: group.rs  mod.rs
src/source/polygon/head/block/: element.rs  format.rs  mod.rs
src/source/polygon/head/block/comment/: mod.rs  obj_info.rs
src/source/polygon/head/block/property/: list.rs  mod.rs  scalar.rs
src/source/polygon/head/meta/: element.rs  format.rs  mod.rs
src/source/polygon/head/meta/comment/: mod.rs
src/source/polygon/header/: decode.rs  encode.rs  mod.rs  property.rs
src/source/polygon/object/: access.rs  decode.rs  encode.rs  id.rs  mod.rs
src/source/polygon/payload/: decode.rs  mod.rs
(+3 files in other folders)
