[package]
authors = ["Asher Jingkong Chen"]
description = "A library to load scenes for `gausplat`"
edition.workspace = true
license-file = "LICENSE"
name = "gausplat-loader"
publish = false
readme = "README.md"
repository = "https://github.com/AsherJingkongChen/gausplat-loader"
version.workspace = true

[dependencies]
ascii = {workspace = true, features = ["std"]}
burn-tensor = {workspace = true}
bytemuck = {workspace = true}
globset = {workspace = true}
image = {workspace = true, features = ["jpeg", "png", "rayon"]}
indexmap = {workspace = true, features = ["rayon", "std"]}
paste = {workspace = true}
log = {workspace = true}
rand = {workspace = true, features = ["getrandom", "std_rng"]}
rand_distr = {workspace = true}
rayon = {workspace = true}
thiserror = {workspace = true}
walkdir = {workspace = true}

[dev-dependencies]
burn-ndarray = {workspace = true}
divan = {workspace = true}

[[bench]]
harness = false
name = "decode"
path = "benches/decode.rs"
